# obscura

./: .coverage  .dockerignore  .env.example  .github  .gitignore  .mcp.json  .todo_complete.txt  .vulture_whitelist.py  2025_spending_report.md  AGENTS.md  API_COMPLETE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_PLAN.md  COMPLETION_REPORT.md  DDOG_OPTIONS_RESEARCH_SUMMARY.md  DOT-FILES.md  Dockerfile  Dockerfile.full  EXPANSION_PLAN.md  FEATURES.md  FIX_PLAN.md  GITHUB-INTEGRATION.md  INSTALL.md  MCP-README.md  MCP_CLI_COMPLETION_REPORT.md  Makefile  OBSCURA.md  OBSCURA_MEMORY_IMPLEMENTATION.md  OBSCURA_MEMORY_STATUS.md  POC-CORRECTED.md  POC-NESTED-ROUTING.md  POC-SUMMARY.md  PROJECT-README.md  PROJECT.md  QUICKSTART.md  README.md  README.playwright.md  RELEASING.md  SECURITY.md  (+111 more)
.claude/: obscura_session.py
.claude/plans/: provider-model-separation.md
.codex/: hooks.json
.github/: CLI_COMPAT_SHIMS.md  dependabot.yml  pull_request_template.md
.github/workflows/: auto-release.yml  browser-extension.yml  build-and-push-with-hf.yml  ci.yml  pyright.yml  release.yml  ruff.yml  security.yml  semver-check.yml  test-image-matrix.yml  test.yml  ultrareview.yml
.obscura/: cli_history  cli_history_v2  events.db-shm  events.db-wal
.obscura/mcp/: noauth-demo.json
.well-known/: agent.json
Formula/: obscura.rb
agents/: INDEX.md
agents/house_hunter/: agent.py
config/: channels.yaml  mcp-config.json  mcp-config.template.json  notify.py  openapi.json
config/env/: dev.env  prod.env  staging.env
copilot-cli-state/: command-history-state.json  config.json
crawlers/applications/: INDEX.md
crawlers/devops/: renovate.js.md
crawlers/fv-platform-main/: .gitlab-ci.yml.md  ruff.toml.md  test.sh.md
crawlers/platform/: INDEX.md  delete_log_groups.sh.md
demos/: __init__.py
demos/a2a/: __init__.py  agents.py  orchestrator.py  run.py  run_aper_10_agents.py
demos/backend_agents/: __init__.py  common.py  run_claude_agent.py  run_codex_agent.py  run_copilot_agent.py  run_live_system_tools_agent.py
demos/mcp/: __init__.py  run_generic_mcp_agent.py  run_playwright_mcp_demo.py
demos/openclaw_bridge/: __init__.py  run.py
demos/support/: __init__.py  (+4 more)
docs/: 02-25-25-arch.md  02-25-25-cli.md  02-25-25-memory-passthorugh.md  AGENT-ROUTING.md  AGENTS.md  API.md  API_DEVELOPMENT_PLAN.md  ARCHITECTURE.md  AUTH_GUIDE.md  AUTH_SELF_HOSTING.md  AUTO-SYNC.md  CLI.md  DEPRECATION_PLAN.md  DESIGN-DIAGRAMS.md  DEVELOPMENT.md  DYNAMIC_TOOL_DISCOVERY.md  FIX_PLAN.md  GITHUB-INTEGRATION.md  INSTALL.md  INTEGRATIONS.md  MCP-README.md  MCP_SETUP.md  MEMORY.md  MIGRATION-NOTES.md  NO-OBSIDIAN.md  OPENCLAW_INTEGRATION.md  PARITY_4_WEEK_PLAN.md  PARITY_MATRIX.md  PLAN_TUI.md  PLATFORM-ARCHITECTURE.md  PLUGIN_ARCHITECTURE.md  PLUGIN_BOUNDARIES.md  QUICKSTART.md  SDK_BACKENDS.md  SYSTEM_PROMPTS.md  TESTING.md  TOOLS.md  TUI_PLAN.md  UNIFIED_MODEL_V2.md  USER_GUIDE.md  (+7 more)
examples/: README.md  agent_instance_template.py  agents-with-lazy-skills.yaml  channels_quickstart.py  full_agent_builder_template.py  full_agent_builder_two_profiles.py  swarm_code_review.py  working_demo.py
examples/plugins/obscura-github/: README.md  plugin.toml  plugin.yaml  pyproject.toml
examples/plugins/obscura-github/obscura_github/: __init__.py  tools.py
examples/plugins/sample_plugin_pkg/: README.md  pyproject.toml
examples/plugins/sample_plugin_pkg/sample_plugin_pkg/: __init__.py
fv_copilot.egg-info/: PKG-INFO  entry_points.txt  requires.txt
git-hooks/: post-commit  post-merge
instructions/: x.claude.md  x.copilot.md  x.md  y.claude.md  y.copilot.md  z.md
launch/: qdrant.sh
memory/: 2026-02-07.md
notebooks/: sqlite-edge-2026-03-09.md
obscura/: __init__.py  approvals.py  config.py  lazy.py  openclaw_bridge.py  vault_provisioner.py
obscura.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
obscura_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
output/: kairos_test_out.txt
plans/: round-4-typed-cores.md  strings-to-enums-and-pydantic.md
scripts/: __init__.py  agent_sync.py  bump_version.py  compose-env.sh  copilot_models.py  crawlers.py  dev-auth-bootstrap-check.sh  dev-compose-oauth-up.sh  fix_workflows.py  generate-skills.py  generate_api_key.py  generate_test_token.py  init-postgres.sql  install.sh  local-down.sh  local-up.sh  migrate_sqlite_to_qdrant.py  migrate_to_postgres.py  obscura_cli.py  openclaw_client.py  partview_throughput_test.py  print_gh_oauth_token.py  run-e2e-tests.sh  run-local-from-compose-env.sh  setup-twilio-webhook.sh  skills_sync.py  slim_agents.py  start-a2a.sh  sync.py  test_server.py  wait-for-jwks.sh  yaml_to_toml.py
sdk/: __init__.py  _auth.py  _sessions.py  _stream.py  _tools.py  _types.py  agent.py  agent_loop.py  agents.py  claude_backend.py  cli.py  client.py  config.py  context.py  copilot_backend.py  deps.py  handlers.py  memory.py  openclaw_bridge.py  server.py  vector_memory.py  vector_memory_filters.py  vector_memory_rerank.py  vector_memory_router.py
skills/: git-workflow.md  setup.claude.md  setup.copilot.md  setup.md  testing.md
tests/: README.md  UAT_TUI.md  conftest.py  test_agent.py  test_agent_loop.py  test_agents.py  test_auth.py  test_auth_middleware.py  test_backend_claude.py  test_backend_copilot.py  test_backend_localllm.py  test_backend_mcp.py  test_backend_openai_compat.py  test_backends_localllm.py  test_backends_mcp.py  test_backends_openai.py  test_cleanup.py  test_cli.py  test_config.py  test_config_env.py  test_context.py  test_copilot_models.py  test_crawlers.py  test_deps.py  test_handlers.py  test_heartbeat_alerts.py  test_heartbeat_client.py  test_heartbeat_monitor.py  test_heartbeat_store_full.py  test_internal_rpc.py  test_mcp_client.py  test_mcp_server.py  test_memory.py  test_playwright_inject.py  test_rbac.py  test_routes_agent_groups.py  test_routes_agents.py  test_routes_memory.py  test_routes_sessions.py  test_routes_vector_memory.py  (+34 more)
untitled/: pyproject.toml
web-ui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+8964 files in other folders)
