[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obscura"
version = "0.2.0"
description = "Obscura - Multi-agent context management with TUI"
requires-python = ">=3.13"
dependencies = [
    "github-copilot-sdk>=0.2.1",
    "claude-agent-sdk>=0.1.0",
    # Official OpenAI Codex Python SDK — not published to PyPI; installed
    # from source in the openai/codex monorepo.
    # See https://developers.openai.com/codex/sdk
    "openai-codex-app-server-sdk",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=2.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "structlog>=23.0.0",
    "qdrant-client>=1.17.0",
    "psycopg2-binary>=2.9.9",
    "click>=8.3.1",
    "rich>=14.3.2",
    "prompt-toolkit>=3.0.50",
    "toons>=0.5.0",
    "fastmcp>=3.1.0",
    "tomli-w==1.2.0",
    "pyjwt[crypto]>=2.8.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
# ---------------------------------------------------------------------------
# Infra extras
# ---------------------------------------------------------------------------
voice = [
    "openai-whisper>=20240930",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "cryptography>=42.0",
    "fastapi>=0.128.4",
    "uvicorn>=0.40.0",
    "sse-starlette>=3.2.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "pytest-cov>=6.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "structlog>=23.0.0",
]
a2a = [
    "redis[hiredis]>=5.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-reflection>=1.60.0",
    "protobuf>=4.25.0",
]
metrics = [
    "psutil>=5.9.0",
]
yaml = [
    "pyyaml>=6.0",
]
toml = [
    "tomli-w>=1.0",
]

# ---------------------------------------------------------------------------
# Provider extras — one per non-default LLM/backend
# ---------------------------------------------------------------------------
anthropic = ["anthropic>=0.40.0"]

# ---------------------------------------------------------------------------
# Plugin extras — one per plugin with pip-installable deps.
# Names mirror the plugin id in obscura/plugins/builtins/<id>.toml.
# ---------------------------------------------------------------------------
duckdb = ["duckdb>=1.0.0"]
datafusion = ["datafusion>=40.0"]
huggingface = ["huggingface_hub>=0.20"]
x-twitter = ["xdk>=0.4.5"]
notion = ["notion-client>=2.0.0"]
coingecko = ["pycoingecko>=3.0.0"]
datadog = ["datadog-api-client>=2.0.0"]
msgraph = ["msal>=1.27.0"]
gws = ["gws-cli"]

# ---------------------------------------------------------------------------
# Category bundles — install a themed group of plugins in one shot.
# ---------------------------------------------------------------------------
plugins-data = ["obscura[duckdb,datafusion]"]
plugins-finance = ["obscura[coingecko]"]
plugins-productivity = ["obscura[notion,gws,msgraph]"]
plugins-observability = ["obscura[datadog]"]
plugins-social = ["obscura[x-twitter]"]
plugins-ml = ["obscura[huggingface]"]

# ---------------------------------------------------------------------------
# Meta bundles
# ---------------------------------------------------------------------------
# Every plugin extra rolled up — pairs with the Dockerfile.full runtime image.
plugins-all = [
    "obscura[duckdb,datafusion,huggingface,x-twitter,notion,coingecko,datadog,msgraph,gws]",
]
# The "batteries included" target for pip users — server + telemetry + every
# plugin + every provider. Binary plugin deps (jq, rg, playwright, …) still
# need the runtime bootstrapper or the Dockerfile.full image.
full = ["obscura[server,telemetry,a2a,metrics,voice,anthropic,plugins-all]"]

# Back-compat alias — older docs and CI jobs reference `--extra providers`.
# Kept lean; prefer the per-provider / per-plugin extras above.
providers = [
    "obscura[anthropic,msgraph,coingecko,notion,datadog,x-twitter]",
]

[project.scripts]
obscura = "obscura.cli:main"
obscura-mcp = "obscura.mcp_server.__main__:main"
obscura-auth = "obscura.cli.auth_commands:auth_group"
vault-gen = "obscura.vault_gen.cli:main"

[dependency-groups]
dev = [
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.40.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "pytest-cov>=6.0",
    "tomli-w>=1.0",
    "respx>=0.21",
]

# Package discovery - explicitly define what to include
[tool.setuptools]
packages = [
    "obscura",
    "obscura.core",
    "obscura.core.client",
    "obscura.providers",
    "obscura.tools",
    "obscura.tools.system",
    "obscura.tools.policy",
    "obscura.tools.providers",
    "obscura.integrations",
    "obscura.integrations.msgraph",
    "obscura.integrations.mcp",
    "obscura.integrations.a2a",
    "obscura.integrations.a2a.transports",
    "obscura.auth",
    "obscura.agent",
    "obscura.memory",
    "obscura.vector_memory",
    "obscura.telemetry",
    "obscura.server",
    "obscura.routes",
    "obscura.deps",
    "obscura.cli",
    "obscura.cli.app",
    "obscura.eval",
    "obscura.testing",
    "obscura.parity",
    "obscura.heartbeat",
    "obscura.skills",
    "obscura.schemas",
    "obscura.mcp_server",
    "obscura.vault_gen",
    "obscura.vault_gen.access",
    "obscura.vault_gen.sync",
    "obscura.vault_gen.sync.adapters",
]

[tool.setuptools.package-data]
obscura = ["py.typed"]
"obscura.vault_gen" = [
    "py.typed",
    "templates/vault/**/*",
    "templates/config/**/*",
    "templates/shared/**/*",
]

# Exclude non-package directories
[tool.setuptools.exclude-package-data]
obscura = ["helm/*", "infra/*", "docs/*", "scripts/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast in-process tests",
    "integration: tests that touch external systems",
    "e2e: end-to-end tests requiring a running server",
    "browser: browser-extension host lifecycle tests (subprocess-spawning)",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # bugbear
    "UP",  # pyupgrade (py313-safe)
    "SIM", # simplify
    "TID", # banned/relative imports
    "TCH", # type-checking-only imports
    "PL",  # pylint subset (incl. PLC0415: no nested imports)
    "RUF", # ruff-specific
]
ignore = [
    "E501",    # line length
    "PLR0913", # too many args (Click commands legitimately have many)
    "PLR0912", # too many branches (REPL command dispatch)
    "PLR0915", # too many statements
    "PLR2004", # magic numbers (status codes, byte sizes are clearer inline)
    "PLR0911", # too many return statements (command handlers)
    "PLW2901", # for loop var overwritten
    "PLW0603", # global statements (used intentionally for caches)
    "SIM108",  # ternary suggestion (often less readable for long branches)
    "SIM117",  # combine nested with-statements (often less readable)
    "B008",    # function calls in defaults (Click idiom)
    "B904",    # raise-from (often verbose without value)
    "B007",    # unused loop variable (common with enumerate)
    "UP038",   # isinstance with X|Y (rejected by some Python versions at runtime)
]

[tool.ruff.lint.per-file-ignores]
# Pre-existing ignores
"scripts/sync.py" = ["F541"]
"scripts/test_server.py" = ["F541"]
"obscura/agent/agent.py" = ["E402"]
"obscura/agent/agents.py" = ["E402"]
"obscura/providers/claude.py" = ["E402"]
"obscura/providers/copilot.py" = ["E402"]
"obscura/providers/localllm.py" = ["E402"]
"obscura/providers/openai.py" = ["E402"]
"obscura/core/client/__init__.py" = ["E402"]
"obscura/deps/__init__.py" = ["E402"]
"obscura/integrations/mcp/server.py" = ["F811"]
"obscura/routes/admin.py" = ["E741"]

# Lazy-import accessors live here intentionally — single canonical home for
# every justified runtime-deferred import. Subsequent commits empty the rest
# of this list as files are cleaned up.
"obscura/cli/_lazy/*.py" = ["PLC0415"]

# Transitional: silence PLC0415 in CLI files we'll clean up in commits 2-5.
"obscura/cli/__init__.py" = ["E402", "PLC0415"]
"obscura/cli/commands.py" = ["PLC0415"]
"obscura/cli/_repl_loop.py" = ["PLC0415"]
"obscura/cli/session.py" = ["PLC0415"]
"obscura/cli/_send.py" = ["PLC0415"]
"obscura/cli/eval_commands.py" = ["PLC0415"]
"obscura/cli/bootstrap.py" = ["PLC0415"]
"obscura/cli/auth_commands.py" = ["PLC0415"]
"obscura/cli/control_commands.py" = ["PLC0415"]
"obscura/cli/prompt.py" = ["PLC0415"]
"obscura/cli/_daemon.py" = ["PLC0415"]
"obscura/cli/_tool_confirm.py" = ["PLC0415"]
"obscura/cli/kairos_commands.py" = ["PLC0415"]
"obscura/cli/render.py" = ["PLC0415"]
"obscura/cli/mcp_commands.py" = ["PLC0415"]
"obscura/cli/_env_loader.py" = ["PLC0415"]
"obscura/cli/_guide_sync.py" = ["PLC0415"]
"obscura/cli/repl.py" = ["PLC0415"]
"obscura/cli/widgets.py" = ["PLC0415"]
"obscura/cli/renderer/__init__.py" = ["PLC0415"]
"obscura/cli/app/__init__.py" = ["PLC0415"]
"obscura/cli/app/diff_engine.py" = ["PLC0415"]
"obscura/cli/app/modes.py" = ["PLC0415"]
"obscura/auth/cli_user.py" = ["PLC0415"]
"obscura/auth/profile.py" = ["PLC0415"]
"obscura/auth/supabase_secrets.py" = ["PLC0415"]

[tool.uv.sources]
# Pin to openai/codex monorepo — the third-party "codex-app-server-sdk" on
# PyPI is unrelated. See https://github.com/openai/codex/tree/main/sdk/python
openai-codex-app-server-sdk = { git = "https://github.com/openai/codex.git", subdirectory = "sdk/python" }
