[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
# Renamed from `obscura` to `obscura-agent` to avoid the PyPI name collision
# with an unrelated file-encryption tool also called `obscura`. The CLI
# binary stays `obscura` (see [project.scripts] below).
name = "obscura-agent"
version = "0.5.3"
description = "Obscura - Multi-agent context management with TUI"
requires-python = ">=3.13"
dependencies = [
    "github-copilot-sdk>=0.2.1",
    "claude-agent-sdk>=0.1.0",
    # Official OpenAI Codex Python SDK — not published to PyPI; installed
    # from source in the openai/codex monorepo.
    # See https://developers.openai.com/codex/sdk
    "openai-codex-app-server-sdk",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=2.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "structlog>=23.0.0",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=3.0.0",
    "psycopg2-binary>=2.9.9",
    "click>=8.3.1",
    "rich>=14.3.2",
    "prompt-toolkit>=3.0.50",
    "toons>=0.5.0",
    "fastmcp>=3.1.0",
    "tomli-w==1.2.0",
    "pyjwt[crypto]>=2.8.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
# ---------------------------------------------------------------------------
# Infra extras
# ---------------------------------------------------------------------------
voice = [
    "openai-whisper>=20240930",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "cryptography>=42.0",
    "fastapi>=0.128.4",
    "uvicorn>=0.40.0",
    "sse-starlette>=3.2.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "pytest-cov>=6.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "structlog>=23.0.0",
]
a2a = [
    "redis[hiredis]>=5.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-reflection>=1.60.0",
    "protobuf>=4.25.0",
]
metrics = [
    "psutil>=5.9.0",
]
yaml = [
    "pyyaml>=6.0",
]
toml = [
    "tomli-w>=1.0",
]

# ---------------------------------------------------------------------------
# Provider extras — one per non-default LLM/backend
# ---------------------------------------------------------------------------
anthropic = ["anthropic>=0.40.0"]

# ---------------------------------------------------------------------------
# Plugin extras — one per plugin with pip-installable deps.
# Names mirror the plugin id in obscura/plugins/builtins/<id>.toml.
# ---------------------------------------------------------------------------
duckdb = ["duckdb>=1.0.0"]
datafusion = ["datafusion>=40.0"]
huggingface = ["huggingface_hub>=0.20"]
x-twitter = ["xdk>=0.4.5"]
notion = ["notion-client>=2.0.0"]
coingecko = ["pycoingecko>=3.0.0"]
datadog = ["datadog-api-client>=2.0.0"]
msgraph = ["msal>=1.27.0"]
gws = ["gws-cli"]

# ---------------------------------------------------------------------------
# Category bundles — install a themed group of plugins in one shot.
# ---------------------------------------------------------------------------
plugins-data = ["obscura-agent[duckdb,datafusion]"]
plugins-finance = ["obscura-agent[coingecko]"]
plugins-productivity = ["obscura-agent[notion,gws,msgraph]"]
plugins-observability = ["obscura-agent[datadog]"]
plugins-social = ["obscura-agent[x-twitter]"]
plugins-ml = ["obscura-agent[huggingface]"]

# ---------------------------------------------------------------------------
# Meta bundles
# ---------------------------------------------------------------------------
# Every plugin extra rolled up — pairs with the Dockerfile.full runtime image.
plugins-all = [
    "obscura-agent[duckdb,datafusion,huggingface,x-twitter,notion,coingecko,datadog,msgraph,gws]",
]
# The "batteries included" target for pip users — server + telemetry + every
# plugin + every provider. Binary plugin deps (jq, rg, playwright, …) still
# need the runtime bootstrapper or the Dockerfile.full image.
full = ["obscura-agent[server,telemetry,a2a,metrics,voice,anthropic,plugins-all]"]

# Back-compat alias — older docs and CI jobs reference `--extra providers`.
# Kept lean; prefer the per-provider / per-plugin extras above.
providers = [
    "obscura-agent[anthropic,msgraph,coingecko,notion,datadog,x-twitter]",
]

[project.scripts]
obscura = "obscura.cli:main"
obscura-mcp = "obscura.mcp_server.__main__:main"
obscura-auth = "obscura.cli.auth_commands:auth_group"
vault-gen = "obscura.vault_gen.cli:main"

[dependency-groups]
dev = [
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.40.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "pytest-cov>=6.0",
    "tomli-w>=1.0",
    "respx>=0.21",
]

# Package discovery - explicitly define what to include
[tool.setuptools]
packages = [
    "obscura",
    "obscura.core",
    "obscura.core.client",
    "obscura.providers",
    "obscura.tools",
    "obscura.tools.system",
    "obscura.tools.policy",
    "obscura.tools.providers",
    "obscura.integrations",
    "obscura.integrations.msgraph",
    "obscura.integrations.mcp",
    "obscura.integrations.a2a",
    "obscura.integrations.a2a.transports",
    "obscura.auth",
    "obscura.agent",
    "obscura.memory",
    "obscura.vector_memory",
    "obscura.telemetry",
    "obscura.server",
    "obscura.routes",
    "obscura.deps",
    "obscura.cli",
    "obscura.cli.app",
    "obscura.eval",
    "obscura.testing",
    "obscura.parity",
    "obscura.heartbeat",
    "obscura.skills",
    "obscura.schemas",
    "obscura.mcp_server",
    "obscura.runtime",
    "obscura.runtime.cache",
    "obscura.runtime.storage",
    "obscura.vault_gen",
    "obscura.vault_gen.access",
    "obscura.vault_gen.sync",
    "obscura.vault_gen.sync.adapters",
]

[tool.setuptools.package-data]
obscura = ["py.typed"]
"obscura.vault_gen" = [
    "py.typed",
    "templates/vault/**/*",
    "templates/config/**/*",
    "templates/shared/**/*",
]

# Exclude non-package directories
[tool.setuptools.exclude-package-data]
obscura = ["helm/*", "infra/*", "docs/*", "scripts/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast in-process tests",
    "integration: tests that touch external systems",
    "e2e: end-to-end tests requiring a running server",
    "browser: browser-extension host lifecycle tests (subprocess-spawning)",
]

[tool.ruff]
target-version = "py313"
# Stand-alone code that hasn't been folded into the obscura package yet —
# excluded from ruff until it finds a permanent home under obscura/*.
extend-exclude = [
    "packages/browser-extension/native-host",
    "tools/playwright",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # bugbear
    "UP",  # pyupgrade (py313-safe)
    "SIM", # simplify
    "TID", # banned/relative imports
    "TCH", # type-checking-only imports
    "PL",  # pylint subset (incl. PLC0415: no nested imports)
    "RUF", # ruff-specific
    "ANN401", # ban dict[str, Any] / Any in annotations — scoped via per-file-ignores below to obscura/core/enums and obscura/core/models only
]
ignore = [
    # pycodestyle / pyflakes
    "E501",    # line length

    # pylint subset
    "PLR0911", # too many return statements (command handlers)
    "PLR0912", # too many branches (REPL command dispatch)
    "PLR0913", # too many args (Click commands legitimately have many)
    "PLR0915", # too many statements
    "PLR2004", # magic numbers (status codes, byte sizes are clearer inline)
    "PLW0603", # global statements (used intentionally for caches)
    "PLW1510", # subprocess.run without check= (often intentional)
    "PLW2901", # for loop var overwritten
    "PLC2701", # private import access (used between related modules)
    "PLC0414", # explicit re-export (we use it deliberately in re-export modules)

    # simplify
    "SIM102",  # combine nested ifs (often less readable for long branches)
    "SIM105",  # use contextlib.suppress (try/except/pass is often clearer)
    "SIM108",  # ternary suggestion (often less readable for long branches)
    "SIM117",  # combine nested with-statements (often less readable)

    # bugbear
    "B007",    # unused loop variable (common with enumerate)
    "B008",    # function calls in defaults (Click idiom)
    "B009",    # getattr with constant string (sometimes intentional)
    "B023",    # function uses loop variable (intentional in many cases)
    "B904",    # raise-from (often verbose without value)
    "BLE001",  # broad except Exception (fine in top-level error traps)

    # pyupgrade
    "UP037",   # quoted annotations (sometimes needed for forward refs)

    # type-checking imports
    "TC001",   # move application import to TYPE_CHECKING (stylistic; out of scope here)
    "TC002",   # move third-party import to TYPE_CHECKING (stylistic; out of scope here)
    "TC003",   # move stdlib import to TYPE_CHECKING (stylistic; out of scope here)
    "TC006",   # runtime cast() argument should be quoted (ugly, often unhelpful)

    # ruff-specific
    "RUF002",  # ambiguous unicode (intentional in user-facing strings)
    "RUF006",  # asyncio.create_task without storing ref (fine when fire-and-forget)
    "RUF012",  # mutable class attributes (sometimes needed)
    "RUF022",  # __all__ unsorted (manual ordering is meaningful)
    "RUF100",  # unused noqa — runs after we trim ignores; let user decide

    # bandit-equivalent / convention
    "ARG001",  # unused function arg (interface requirement)
    "ARG002",  # unused method arg (interface requirement)
    "ARG005",  # unused lambda arg
    "SLF001",  # private member access (related modules)
    "C901",    # too complex (subjective)
]

[tool.ruff.lint.per-file-ignores]
# Vulture whitelist — references-as-statements are intentional (vulture
# treats them as "uses" to silence false-positive dead-code flags). Don't
# lint this file as if it were regular Python.
".vulture_whitelist.py" = ["B018", "F821"]

# Pre-existing ignores
"scripts/sync.py" = ["F541"]
"scripts/test_server.py" = ["F541"]
"obscura/agent/agent.py" = ["E402"]
"obscura/agent/agents.py" = ["E402"]
"obscura/providers/claude.py" = ["E402"]
"obscura/providers/copilot.py" = ["E402"]
"obscura/providers/localllm.py" = ["E402"]
"obscura/providers/openai.py" = ["E402"]
"obscura/core/client/__init__.py" = ["E402"]
"obscura/deps/__init__.py" = ["E402"]
"obscura/integrations/mcp/server.py" = ["F811"]
"obscura/routes/admin.py" = ["E741"]

# Lazy-import accessors live here intentionally — single canonical home for
# every justified runtime-deferred import. Subsequent commits empty the rest
# of this list as files are cleaned up.
"obscura/cli/_lazy/*.py" = ["PLC0415"]

# ANN401 (no `Any` in annotations) is enforced ONLY in obscura/core/enums/
# and obscura/core/models/ — the strict-typed packages introduced by the
# Round 1/2/4 enum + Pydantic refactor. Existing code elsewhere uses Any
# legitimately at JSON-RPC / SQLite / plugin manifest / tool-args boundaries
# (see plans/round-4-typed-cores.md §4.2 for triage rules). This block
# disables ANN401 everywhere except those two packages.
"tests/**" = ["ANN401"]
"scripts/**" = ["ANN401"]
"typings/**" = ["ANN401"]
"obscura/{__init__,approvals,config,lazy,openclaw_bridge,vault_provisioner}.py" = ["ANN401"]
"obscura/{admin,agent,arbiter,auth,cli,deps,eval,heartbeat,integrations,kairos,manifest,mcp_server,memory,memory_channels,notifications,notify,parity,plugins,profile,prompts,providers,routes,runtime,schemas,server,services,skills,specs,telemetry,testing,tools,vault_gen,vector_memory,voice}/**" = ["ANN401"]
"obscura/core/{__init__,_default_commands,_default_docs,_default_evals,_default_skills,agent_loop_factory,agent_loop_hooks,agent_loop_middleware,agent_loop_predictive,agent_loop_v2,auth,backend_retry,background_tasks,bash_classifier,circuit_breaker,cleanup,commit_attribution,compaction,config,config_io,context,context_lazy,context_suggestions,context_window,cost_tracker,dag,db_factory,deep_log,eval_checks,event_store,feature_flags,file_watcher,frontmatter,handlers,health,hooks,lifecycle,lifecycle_events,llm_cache,migrate_external,output_quality,parallel_plan,paths,permission_modes,pg_config,postgres_event_store,predictive_tools,preflight,prompt_cache,rate_limiter,reasoning_output,result_store,retry,session_utils,sessions,settings,smart_retry,stream,system_prompts,task_queue,templates,throttle,tool_bridge,tool_context,tool_executor,tool_policy,tool_router,tool_score_index,tools,types,workflows,workspace}.py" = ["ANN401"]
"obscura/core/{client,compiler,kairos,supervisor}/**" = ["ANN401"]

# Transitional: silence PLC0415 in CLI files we'll clean up in commits 2-5.
"obscura/cli/__init__.py" = ["E402", "PLC0415"]
"obscura/cli/commands.py" = ["PLC0415"]
"obscura/cli/_repl_loop.py" = ["PLC0415"]
"obscura/cli/session.py" = ["PLC0415"]
"obscura/cli/_send.py" = ["PLC0415"]
"obscura/cli/eval_commands.py" = ["PLC0415"]
"obscura/cli/bootstrap.py" = ["PLC0415"]
"obscura/cli/auth_commands.py" = ["PLC0415"]
"obscura/cli/control_commands.py" = ["PLC0415"]
"obscura/cli/prompt.py" = ["PLC0415"]
"obscura/cli/_daemon.py" = ["PLC0415"]
"obscura/cli/_tool_confirm.py" = ["PLC0415"]
"obscura/cli/kairos_commands.py" = ["PLC0415"]
"obscura/cli/render.py" = ["PLC0415"]
"obscura/cli/mcp_commands.py" = ["PLC0415"]
"obscura/cli/_env_loader.py" = ["PLC0415"]
"obscura/cli/_guide_sync.py" = ["PLC0415"]
"obscura/cli/repl.py" = ["PLC0415"]
"obscura/cli/widgets.py" = ["PLC0415"]
"obscura/cli/renderer/__init__.py" = ["PLC0415"]
"obscura/cli/renderer/modern/layout.py" = ["PLC0415"]
"obscura/cli/renderer/modern/renderer.py" = ["PLC0415"]
"obscura/cli/trace.py" = ["PLC0415"]
"obscura/cli/app/__init__.py" = ["PLC0415"]
"obscura/cli/app/diff_engine.py" = ["PLC0415"]
"obscura/cli/app/modes.py" = ["PLC0415"]
"obscura/auth/cli_session.py" = ["PLC0415"]
"obscura/auth/cli_user.py" = ["PLC0415"]
"obscura/auth/profile.py" = ["PLC0415"]
"obscura/auth/supabase_secrets.py" = ["PLC0415"]

# PLC0415 (no nested imports) is enforced for obscura/cli/** only in this pass.
# Non-CLI directories carry pre-existing lazy imports out of scope; clean up
# in a future PR.
"obscura/agent/**/*.py" = ["PLC0415"]
"obscura/arbiter/**/*.py" = ["PLC0415"]
"obscura/auth/__init__.py" = ["PLC0415"]
"obscura/auth/middleware.py" = ["PLC0415"]
"obscura/auth/rate_limit_middleware.py" = ["PLC0415"]
"obscura/auth/rbac.py" = ["PLC0415"]
"obscura/auth/secrets.py" = ["PLC0415"]
"obscura/core/**/*.py" = ["PLC0415"]
"obscura/deps/**/*.py" = ["PLC0415"]
"obscura/eval/**/*.py" = ["PLC0415"]
"obscura/heartbeat/**/*.py" = ["PLC0415"]
"obscura/integrations/**/*.py" = ["PLC0415"]
"obscura/kairos/**/*.py" = ["PLC0415"]
"obscura/manifest/**/*.py" = ["PLC0415"]
"obscura/mcp_server/**/*.py" = ["PLC0415"]
"obscura/memory/**/*.py" = ["PLC0415"]
"obscura/memory_channels/**/*.py" = ["PLC0415"]
"obscura/notify/**/*.py" = ["PLC0415"]
"obscura/parity/**/*.py" = ["PLC0415"]
"obscura/plugins/**/*.py" = ["PLC0415"]
"obscura/providers/**/*.py" = ["PLC0415"]
"obscura/routes/**/*.py" = ["PLC0415"]
"obscura/schemas/**/*.py" = ["PLC0415"]
"obscura/server/**/*.py" = ["PLC0415"]
"obscura/telemetry/**/*.py" = ["PLC0415"]
"obscura/testing/**/*.py" = ["PLC0415"]
"obscura/tools/**/*.py" = ["PLC0415"]
"obscura/vault_gen/**/*.py" = ["PLC0415"]
"obscura/vector_memory/**/*.py" = ["PLC0415"]
"obscura/voice/**/*.py" = ["PLC0415"]

# Tests: same rule scope (don't enforce PLC0415 in test code)
"tests/**/*.py" = ["PLC0415"]
"scripts/**/*.py" = ["PLC0415"]

[tool.vulture]
# Dead-code scanner. Run from repo root: `vulture` (no args, reads this config).
# Whitelist additions go in .vulture_whitelist.py — vulture treats it as
# regular Python and the references silence false positives for plugin
# entrypoints, framework callbacks, Pydantic fields, etc.
paths = ["obscura", "packages", "scripts", "tools", ".vulture_whitelist.py"]
exclude = [
    "*/node_modules/*",
    "*/venv*/*",
    "*/.git/*",
    "*/__pycache__/*",
    "*/.egg-info/*",
    "*/dist/*",
    "*/build/*",
]
min_confidence = 80
ignore_decorators = [
    "@app.*",
    "@router.*",
    "@server.*",
    "@*.route",
    "@*.get",
    "@*.post",
    "@*.put",
    "@*.delete",
    "@*.fixture",
    "@validator",
    "@field_validator",
    "@root_validator",
    "@model_validator",
    "@tool",
    "@cli.command",
    "@click.*",
    "@property",
]

[tool.uv.sources]
# Pin to openai/codex monorepo — the third-party "codex-app-server-sdk" on
# PyPI is unrelated. See https://github.com/openai/codex/tree/main/sdk/python
openai-codex-app-server-sdk = { git = "https://github.com/openai/codex.git", subdirectory = "sdk/python" }
